# aoc2024

./: .envrc  .gitignore  README.md  aoc2024.cabal  fourmolu.yaml  result-out  shell.nix
app/: Day1.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Main.hs  Util.hs
data/day1/: puzzle.md
data/day2/: input_example
