cabal-version:      3.4
name:               aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            EUPL-1.2
license-file:       LICENSE
author:             Fernando Ayats
maintainer:         ayatsfer@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    default-extensions:
        , OverloadedStrings
        , ScopedTypeVariables
        , LambdaCase
    other-modules:
        , Util
        , Day1
        , Day2
        , Day3
        , Day4
        , Day5
        , Day6
        , Day7
        , Day11
    build-depends:
        , base
        , optparse-applicative
        , megaparsec
        , text
        , mtl
        , array
        , pretty-show
        , linear
        , parallel
        , async
        , memoize
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -O2
        -threaded
        -rtsopts
        -eventlog
